Update homeplage + conatct page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,9 +58,10 @@ const cvUrl = "/cv.pdf";
           <div class="card">
             <b>Research focus</b>
             <ul class="list">
-              <li>Superconducting resonators / Josephson devices</li>
-              <li>Cryogenic RF measurement + calibration</li>
-              <li>Materials + device characterization</li>
+              <li>Superconducting resonators / Josephson Junctions / transmon qubits</li>
+              <li>Superconductor - semiconductor low noise amplifiers</li>
+              <li>Cryogenic DC + RF measurements</li>
+              <li>Nanofabrication</li>
             </ul>
           </div>
 
